; ModuleID = '/home/carl/AnghaBench/vlc/test/src/input/extr_stream.c_stream_close.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/input/extr_stream.c_stream_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reader = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.reader*)* @stream_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stream_close(%struct.reader* %0) #0 {
  %2 = alloca %struct.reader*, align 8
  store %struct.reader* %0, %struct.reader** %2, align 8
  %3 = load %struct.reader*, %struct.reader** %2, align 8
  %4 = getelementptr inbounds %struct.reader, %struct.reader* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @vlc_stream_Delete(i32 %6)
  %8 = load %struct.reader*, %struct.reader** %2, align 8
  %9 = getelementptr inbounds %struct.reader, %struct.reader* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @libvlc_release(i32 %10)
  %12 = load %struct.reader*, %struct.reader** %2, align 8
  %13 = call i32 @free(%struct.reader* %12)
  ret void
}

declare dso_local i32 @vlc_stream_Delete(i32) #1

declare dso_local i32 @libvlc_release(i32) #1

declare dso_local i32 @free(%struct.reader*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
